tests/baselines/reference/pathMappingBasedModuleResolution10.errors.txt
tests/cases/compiler/root/folder1/file1.ts(1,17): error TS2307: Cannot find module './file2'.
tests/cases/compiler/root/generated/folder2/file3.ts(1,22): error TS2307: Cannot find module '../folder1/file1'.

===TODO:Fixme
==== tests/cases/compiler/root/folder1/file1.ts (1 errors) ====
    import {x} from "./file2" // should be resolved to 'generated/folder1/file2.ts' 
                    ~~~~~~~~~
!!! error TS2307: Cannot find module './file2'.
    
    export var z = x.toExponential();
    
==== tests/cases/compiler/root/generated/folder1/file2.ts (0 errors) ====
    export {x} from "folder1/file3" // should be resolved to 'folder1/file3.ts' 
    
==== tests/cases/compiler/root/folder1/file3.ts (0 errors) ====
    export var x = 1;
    
==== tests/cases/compiler/root/generated/folder2/file3.ts (1 errors) ====
    import {z as y} from "../folder1/file1" // should be resolved to 'folder1/file1.ts'
                         ~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module '../folder1/file1'.
    let z = y.toLowerCase();
    